[package]
name = "brother_ql"
version = "1.1.0"
description = "Generate Brother QL Raster Command data from images"
edition = "2021"
license = "MIT"
authors = ["Maximilian Kienitz <contact@kienitz.dev>"]
repository = "https://github.com/mkienitz/brother_ql"
exclude = ["flake.nix", "flake.lock", ".envrc"]


[dependencies]
bitflags = "2.10.0"
custom_debug = "0.6.2"
image = "0.25.2"
itertools = { version = "0.14.0", features = ["use_alloc"] }
rusb = { version = "0.9", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
thiserror = "2.0.17"
tracing = "0.1.41"

[features]
serde = ["dep:serde"]
usb = ["dep:rusb"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = [
  "tracing",
  "env-filter",
] }

[[example]]
name = "usb_print_c62"
required-features = ["usb"]

[[example]]
name = "usb_status"
required-features = ["usb"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[package.metadata.docs.rs]
all-features = true
