[workspace]
members = ["crates/brother_ql", "crates/brother-label"]
resolver = "3"

[workspace.package]
description = "Generate Brother QL Raster Command data from images"
edition = "2024"
license = "MIT"
authors = ["Maximilian Kienitz <contact@kienitz.dev>"]
repository = "https://github.com/mkienitz/brother_ql"
