[package]
name = "brother-label"
description = "CLI to print images using Brother QL series printers based on the brother_ql crate"
version = "0.1.1"
exclude = ["release.toml"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
brother_ql = { version = "2.2.0", path = "../brother_ql", features = [
  "clap",
  "usb",
  "test-labels",
] }
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
strum = "0.27.2"
tracing-subscriber = { version = "0.3.22", features = [
  "tracing",
  "env-filter",
] }
